@@ -12,8 +12,8 @@ Source code is available
 <li>By FTP/HTTP from
 
 <ul><li>
-<a href="ftp://ftp.lilypond.org/pub/LilyPond/">
- ftp://ftp.lilypond.org/pub/LilyPond/
+<a href="http://lilypond.org/download/">
+ http://lilypond.org/download/
 </a>
 <li>
 <a href="http://www.lilypond.org/ftp/">
