@@ -1,3 +1,7 @@
+2003-12-30  Han-Wen Nienhuys   <hanwen@cs.uu.nl>
+
+	* site/download/index.html:change ftp urls.
+
 2003-10-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: 
